# godot-with-ruby_poc

./: Cargo.toml  Main.tscn  build.rs  project.godot  ruby.gdnlib
src/: lib.rs
